# spor

./: Cargo.toml  README.md  solo.yml
src/: color.rs  git.rs  graph.rs  job.rs  main.rs  remote.rs  ui.rs
